--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ resolver = "2"
 rust-version = "1.69"
 
 [profile.release]
-#opt-level = "s"
-opt-level = 0
+opt-level = "s"
+#opt-level = 3
 
 [profile.dev]
 debug = true    # Symbols are nice and they don't increase the size on Flash
@@ -35,13 +35,20 @@ esp-idf-svc = { version = "0.46", default-features = false, optional = true }
 embedded-svc = { version = "0.25", default-features = false, optional = true }
 
 fftw = {version="0.8.0", optional = true}
-num-complex = "0.4.3"
+#num-complex = "0.4.3"
 num-traits = "0.2.15"
 rustfft = "6"
 realfft = "3"
+
 [dependencies.microfft ]
 version = "0.5.1"
 default-features = true
+features = ["std"]
+path = "crates/microfft-rs"
+
+[dependencies.num-complex]
+version = "0.4.3"
+default-features = false
 features = ["std"]
 
 [build-dependencies]
